<resources>
    <string name="app_name">Shopping List</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username1">Username:</string>
    <string name="email">Email:</string>
    <string name="password1">Password:</string>
    <string name="welcome">Welcome</string>
    <string name="user">Userx</string>
    <string name="new_list">New List</string>
    <string name="see_my_lists">See my lists</string>
    <string name="list_title">List title</string>
    <string name="ok">OK</string>
    <string name="share_list">Share list:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="new_list_dialog">New List Dialog</string>
    <string name="are_you_sure">Are you sure you want to create a new list?</string>
</resources>