<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDirtyWhite"
    tools:context=".NewListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">

        <EditText
            android:id="@+id/etListTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:fontFamily="@font/alef"
            android:inputType="text"
            android:textSize="20sp"
            android:hint="@string/list_title" />

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/ic_button"
            android:fontFamily="@font/alef"
            android:text="@string/ok"
            android:textSize="18sp"
            android:textColor="@color/colorDark"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvListTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/alef"
        android:text="@string/list_title"
        android:textSize="28sp"
        android:textColor="@color/colorDark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alef"
        android:text="@string/share_list"
        android:textSize="18sp"
        android:textColor="@color/colorDark" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alef"
            android:text="@string/yes"
            android:textSize="18sp"
            android:textColorHighlight="@color/colorAkebi" />

        <RadioButton
            android:id="@+id/radioButtonNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alef"
            android:text="@string/no"
            android:textSize="18sp"
            android:textColorHighlight="@color/colorAkebi" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/ic_button"
        android:fontFamily="@font/alef"
        android:text="@string/save"
        android:textColor="@color/colorDark"
        android:textStyle="bold" />

</LinearLayout>