<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDirtyWhite"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvUsernameFragReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/username1"
            android:textSize="18sp"
            android:textColor="@color/colorDark"
            android:fontFamily="@font/alef"/>

        <EditText
            android:id="@+id/etUsernameFragReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:autofillHints="username"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvEmailFragReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/alef"
            android:textSize="18sp"
            android:text="@string/email"
            android:textColor="@color/colorDark" />

        <EditText
            android:id="@+id/etEmailFragReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="emailAddress"
            android:textSize="18sp"
            android:inputType="textEmailAddress"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPasswordFragReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/alef"
            android:text="@string/password1"
            android:textSize="18sp"
            android:textColor="@color/colorDark" />

        <EditText
            android:id="@+id/etPasswordFragReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="password"
            android:textSize="18sp"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonRegisterFragReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/ic_button"
        android:fontFamily="@font/alef"
        android:text="@string/register"
        android:textColor="@color/colorDark"
        android:textStyle="bold" />

</LinearLayout>